--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Plateforme citoyenne de la ville de Médenine pour soumettre suggestions et réclamations" />
     <meta name="keywords" content="Médenine, suggestions, réclamations, municipalité, citoyens" />
-    <title>Suggestions & Réclamations - Ville de Médenine</title>
+    <title>SawtMedenine - Ville de Médenine</title>
   </head>
   <body>
     <div id="root"></div>
